# smolcuts

./: pyproject.toml
smoltex/: prompts.py
