[tool.poetry]
name = "smolcuts"
version = "0.1.2"
description = "Gives you shortcuts to applications"
authors = ["taken from maharshi"]
readme = "README.md"
packages = [{include = "smoltex"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.0"
groq = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
smoltex = "smoltex.main:main"
